styles.css
.body {
    display: flex;
    justify-content: center;
    font-family: "Montserrat", sans-serif;
    margin: 0;
}

.dark {
    background-color: #2F3438;
}

.light {
    background-color: #FFFFFF;
}

.container {
    text-align: center;
    background-color: #4DAB9A;
    border-radius: 20px;
    width: 1600px;
}

.greeting {
    font-size: 3.5rem;
    font-family: 'Lobster', sans-serif;
}

.datetime {
  font-size: 2rem;
}

.error {
    color: #594141;
}

